# 2022-polytech-Potapov

./: LICENSE  README.md
02_compiler/: CMakeCache.txt  CMakeLists.txt  README.md  func.cpp.txt  hello_world.cpp  hello_world.s
03_cpp/calculator/: calc.cpp
03_cpp/intro/: Hi.cpp
04_search_sort/array_insertion/: search_array.cpp
04_search_sort/intro/: README.md  search.cpp
04_search_sort/intro_sort/: print_array.cpp
04_search_sort/linear/: search.cpp
08_oop/intro/: main.cpp
